--- a/index.html
+++ b/index.html
@@ -1,13 +1,306 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Flying Mouse</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>The Flying Mouse</title>
+  <meta name="description" content="One-tap arcade. Short runs. One more try." />
+
+  <!--
+    Hvis du faktisk har en WEB-annonseintegrasjon:
+    - AdSense-script pleier å ligge her i <head>
+    - AdMob er normalt ikke for web.
+    Lim inn din faktiske snippet her hvis du har den.
+  -->
+
+  <style>
+    :root{
+      --bg: #0b0f17;
+      --card: rgba(255,255,255,.06);
+      --card2: rgba(255,255,255,.09);
+      --text: rgba(255,255,255,.92);
+      --muted: rgba(255,255,255,.70);
+      --muted2: rgba(255,255,255,.55);
+      --border: rgba(255,255,255,.12);
+      --shadow: 0 20px 70px rgba(0,0,0,.45);
+      --radius: 18px;
+      --max: 980px;
+    }
+
+    *{ box-sizing:border-box; }
+    body{
+      margin:0;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      color: var(--text);
+      background:
+        radial-gradient(1200px 700px at 20% 0%, rgba(99,102,241,.30), transparent 60%),
+        radial-gradient(900px 600px at 90% 10%, rgba(34,197,94,.18), transparent 55%),
+        radial-gradient(900px 700px at 50% 100%, rgba(236,72,153,.18), transparent 60%),
+        var(--bg);
+    }
+    a{ color:inherit; text-decoration:none; }
+    a:hover{ text-decoration:underline; }
+
+    .wrap{ max-width: var(--max); margin: 0 auto; padding: 28px 18px 60px; }
+
+    .hero{
+      display:grid;
+      grid-template-columns: 1.05fr .95fr;
+      gap: 22px;
+      align-items:center;
+      padding: 22px;
+      border: 1px solid var(--border);
+      border-radius: calc(var(--radius) + 6px);
+      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
+      box-shadow: var(--shadow);
+    }
+
+    .brand{ display:flex; align-items:center; gap: 14px; margin-bottom: 12px; }
+    .logo{
+      width: 56px; height: 56px; border-radius: 14px;
+      background: rgba(255,255,255,.08);
+      border: 1px solid var(--border);
+      overflow:hidden;
+      flex: 0 0 auto;
+    }
+    .logo img{ width:100%; height:100%; object-fit:cover; display:block; }
+
+    h1{ margin:0; font-size: 40px; letter-spacing: -.02em; line-height: 1.05; }
+    .tagline{
+      margin: 10px 0 16px;
+      font-size: 16px;
+      color: var(--muted);
+      line-height: 1.55;
+      max-width: 56ch;
+    }
+
+    .cta{ display:flex; flex-wrap:wrap; gap: 12px; margin-top: 10px; align-items:center; }
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,.06);
+      border-radius: 14px;
+      padding: 12px 14px;
+      gap: 10px;
+      transition: transform .15s ease, background .15s ease;
+      min-height: 46px;
+      text-decoration:none;
+    }
+    .btn:hover{ transform: translateY(-1px); background: rgba(255,255,255,.09); text-decoration:none; }
+    .btn strong{ font-weight: 700; }
+    .btn .muted{ color: var(--muted2); font-size: 13px; }
+
+    .heroMedia{
+      border-radius: var(--radius);
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,.03);
+      overflow:hidden;
+      min-height: 290px;
+      position:relative;
+    }
+    .heroMedia img{ width:100%; height:100%; object-fit:cover; display:block; }
+    .heroMedia .overlay{
+      position:absolute; inset:0;
+      background: linear-gradient(180deg, transparent 40%, rgba(0,0,0,.40));
+      pointer-events:none;
+    }
+
+    section{
+      margin-top: 22px;
+      padding: 22px;
+      border-radius: calc(var(--radius) + 6px);
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,.04);
+    }
+    h2{ margin:0 0 10px; font-size: 22px; letter-spacing: -.01em; }
+    .sub{ margin: 0 0 14px; color: var(--muted); line-height:1.6; max-width: 75ch; }
+
+    .video{
+      border-radius: var(--radius);
+      overflow:hidden;
+      border: 1px solid var(--border);
+      background: rgba(0,0,0,.25);
+    }
+    video{ width:100%; height:auto; display:block; }
+
+    .grid{ display:grid; grid-template-columns: repeat(3, 1fr); gap: 14px; margin-top: 14px; }
+    .card{
+      padding: 16px;
+      border-radius: var(--radius);
+      border: 1px solid var(--border);
+      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
+      min-height: 150px;
+    }
+    .num{
+      width: 34px; height: 34px;
+      border-radius: 12px;
+      background: rgba(255,255,255,.08);
+      border: 1px solid var(--border);
+      display:grid; place-items:center;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+    .card h3{ margin:0 0 8px; font-size: 16px; }
+    .card p{ margin:0; color: var(--muted); line-height:1.6; }
+
+    .shots{ display:grid; grid-template-columns: repeat(3, 1fr); gap: 14px; margin-top: 14px; }
+    .shot{
+      border-radius: var(--radius);
+      border: 1px solid var(--border);
+      overflow:hidden;
+      background: rgba(255,255,255,.03);
+      height: 220px;
+    }
+    .shot img{ width:100%; height:100%; object-fit:cover; display:block; }
+
+    footer{
+      margin-top: 18px;
+      padding: 18px 6px 0;
+      color: var(--muted2);
+      font-size: 13px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 12px;
+      flex-wrap:wrap;
+    }
+    .footerLinks{ display:flex; gap: 14px; flex-wrap:wrap; }
+    .footerLinks a{ color: var(--muted2); }
+
+    /* Enkel “ad slot” (hvis du faktisk bruker web-annonser) */
+    .adslot{
+      margin-top: 16px;
+      border-radius: var(--radius);
+      border: 1px dashed rgba(255,255,255,.18);
+      background: rgba(255,255,255,.03);
+      padding: 14px;
+      color: var(--muted2);
+      font-size: 12px;
+    }
+
+    @media (max-width: 860px){
+      .hero{ grid-template-columns: 1fr; }
+      h1{ font-size: 34px; }
+      .grid, .shots{ grid-template-columns: 1fr; }
+      .heroMedia{ min-height: 220px; }
+    }
+  </style>
 </head>
+
 <body>
-<h1>The Flying Mouse on ios</h1>
-<p>Thank you for playing my game!</p>
-<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf2NsVEUXexIF_5BIfLlNd0K2vd2PKMCkucknTrWHN0nUtmXw/viewform">If you have questions about The Flying Mouse, ask them here.</a></p>
+  <div class="wrap">
+
+    <div class="hero">
+      <div>
+        <div class="brand">
+          <div class="logo">
+            <!-- Last opp og bruk din logo -->
+            <img src="assets/logo.png" alt="The Flying Mouse logo">
+          </div>
+          <div>
+            <div style="color:var(--muted2); font-size:12px; letter-spacing:.12em; text-transform:uppercase;">
+              iOS game
+            </div>
+            <h1>The Flying Mouse</h1>
+          </div>
+        </div>
+
+        <p class="tagline">
+          One-tap arcade where every run is fast, difficult, and addictive.
+          <!-- Bytt dette til din faktiske “hook” -->
+        </p>
+
+        <div class="cta">
+          <!-- Bytt til din App Store-lenke -->
+          <a class="btn" href="YOUR_APPSTORE_LINK" target="_blank" rel="noopener">
+            <strong>Download</strong> <span class="muted">on App Store</span>
+          </a>
+
+          <!-- Din Google Forms-lenke (den du sendte) -->
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSf2NsVEUXexIF_5BIfLlNd0K2vd2PKMCkucknTrWHN0nUtmXw/viewform"
+             target="_blank" rel="noopener">
+            <strong>Feedback</strong> <span class="muted">Ask a question / report a bug</span>
+          </a>
+        </div>
+
+        <!-- Hvis du faktisk har web-annonser (AdSense e.l.), kan du plassere slot her -->
+        <div class="adslot">
+          Optional: web ad slot (AdSense). If you meant AdMob verification (app-ads.txt), ignore this.
+        </div>
+      </div>
+
+      <div class="heroMedia">
+        <!-- Last opp og bruk et “hero”-bilde/screenshot -->
+        <img src="assets/hero.jpg" alt="Screenshot from The Flying Mouse">
+        <div class="overlay"></div>
+      </div>
+    </div>
+
+    <section id="action">
+      <h2>See It In Action</h2>
+      <p class="sub">A quick look at gameplay. Short runs, instant retries.</p>
+
+      <div class="video">
+        <!-- Last opp gameplay-video (mp4) + valgfri poster -->
+        <video controls playsinline preload="metadata" poster="assets/video-poster.jpg">
+          <source src="assets/gameplay.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </section>
+
+    <section id="features">
+      <h2>Why You’ll Love It</h2>
+      <p class="sub">Tre punkter, korte setninger.</p>
+
+      <div class="grid">
+        <div class="card">
+          <div class="num">1</div>
+          <h3>One-Tap Control</h3>
+          <p>Tap to fly. Simple to learn, hard to master.</p>
+        </div>
+
+        <div class="card">
+          <div class="num">2</div>
+          <h3>Skill-Based</h3>
+          <p>Every mistake matters. Practice timing and improve your best.</p>
+        </div>
+
+        <div class="card">
+          <div class="num">3</div>
+          <h3>“One More Try”</h3>
+          <p>Fast attempts that make retries irresistible.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="screenshots">
+      <h2>Screenshots</h2>
+      <p class="sub">Bytt til 3–6 av dine egne bilder.</p>
+
+      <div class="shots">
+        <div class="shot"><img src="assets/screen1.jpg" alt="Gameplay screenshot 1"></div>
+        <div class="shot"><img src="assets/screen2.jpg" alt="Gameplay screenshot 2"></div>
+        <div class="shot"><img src="assets/screen3.jpg" alt="Gameplay screenshot 3"></div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="footerLinks">
+        <!-- Lag disse som egne filer senere, eller pek til eksisterende URLer -->
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="support.html">Support</a>
+
+        <!-- Behold feedback-lenken i footer også, siden dette er hoved-CTAen din nå -->
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf2NsVEUXexIF_5BIfLlNd0K2vd2PKMCkucknTrWHN0nUtmXw/viewform"
+           target="_blank" rel="noopener">Feedback</a>
+      </div>
+      <div>© <span id="year"></span> The Flying Mouse</div>
+    </footer>
+  </div>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
