--- a/index.html
+++ b/index.html
@@ -1,13 +1,388 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Flying Mouse</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>The Flying Mouse</title>
+  <meta name="description" content="One-tap arcade. Short runs. One more try." />
+
+  <!-- Favicon (uses your app icon) -->
+  <link rel="icon" href="media/The Flying Mouse icon.png" type="image/png">
+
+  <style>
+    :root{
+      --bg: #0b0f17;
+      --text: rgba(255,255,255,.94);
+      --muted: rgba(255,255,255,.74);
+      --muted2: rgba(255,255,255,.60);
+      --border: rgba(255,255,255,.14);
+      --shadow: 0 20px 70px rgba(0,0,0,.55);
+      --radius: 18px;
+      --max: 980px;
+
+      /* Less transparent sections */
+      --panel: rgba(10,14,22,.86);
+      --panel2: rgba(12,16,26,.90);
+    }
+
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+    body{
+      margin:0;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      color: var(--text);
+      background-color: var(--bg);
+
+      background-image: url("media/Background.png");
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
+
+    /* Darker overlay to keep content readable */
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background:
+        radial-gradient(1200px 700px at 20% 0%, rgba(99,102,241,.16), transparent 60%),
+        radial-gradient(900px 600px at 90% 10%, rgba(34,197,94,.10), transparent 55%),
+        radial-gradient(900px 700px at 50% 100%, rgba(236,72,153,.10), transparent 60%),
+        rgba(0,0,0,.40);
+      pointer-events:none;
+      z-index: 0;
+    }
+
+    a{ color:inherit; text-decoration:none; }
+    a:hover{ text-decoration:underline; }
+
+    .wrap{
+      max-width: var(--max);
+      margin: 0 auto;
+      padding: 28px 18px 60px;
+      position:relative;
+      z-index:1;
+    }
+
+    .panel{
+      border: 1px solid var(--border);
+      border-radius: calc(var(--radius) + 6px);
+      background: linear-gradient(180deg, var(--panel2), var(--panel));
+      box-shadow: var(--shadow);
+    }
+
+    .hero{
+      display:grid;
+      grid-template-columns: 1.05fr .95fr;
+      gap: 22px;
+      align-items:center;
+      padding: 22px;
+      overflow:hidden;
+    }
+
+    .brand{ display:flex; align-items:center; gap: 14px; margin-bottom: 12px; }
+    .icon{
+      width: 56px; height: 56px; border-radius: 14px;
+      border: 1px solid var(--border);
+      overflow:hidden;
+      flex: 0 0 auto;
+      box-shadow: 0 10px 25px rgba(0,0,0,.35);
+      background: rgba(255,255,255,.06);
+    }
+    .icon img{ width:100%; height:100%; object-fit:cover; display:block; }
+
+    h1{ margin:0; font-size: 40px; letter-spacing: -.02em; line-height: 1.05; }
+    .tagline{
+      margin: 10px 0 16px;
+      font-size: 16px;
+      color: var(--muted);
+      line-height: 1.55;
+      max-width: 56ch;
+    }
+
+    .cta{ display:flex; flex-wrap:wrap; gap: 12px; margin-top: 10px; align-items:center; }
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,.08);
+      border-radius: 14px;
+      padding: 12px 14px;
+      gap: 10px;
+      transition: transform .15s ease, background .15s ease;
+      min-height: 46px;
+      text-decoration:none;
+    }
+    .btn:hover{ transform: translateY(-1px); background: rgba(255,255,255,.11); text-decoration:none; }
+    .btn strong{ font-weight: 750; }
+    .btn .muted{ color: var(--muted2); font-size: 13px; }
+
+    .heroLogo{
+      width: 100%;
+      max-width: 520px;
+      height: auto;
+      display:block;
+      margin-left: auto;
+      filter: drop-shadow(0 18px 55px rgba(0,0,0,.55));
+    }
+
+    /* Spacer between hero and leaderboard: Mouse left, Cheese right */
+    .spacer{
+      margin-top: 22px;
+      margin-bottom: 22px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 16px;
+      padding: 10px 6px;
+      position: relative;
+    }
+    .spacer::before{
+      content:"";
+      position:absolute;
+      left: 0; right: 0; top: 50%;
+      height: 1px;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,.22), transparent);
+      transform: translateY(-50%);
+      pointer-events:none;
+      opacity:.9;
+    }
+    .spacer .mouse,
+    .spacer .cheese{
+      position: relative;
+      z-index: 1;
+      height: auto;
+      filter: drop-shadow(0 14px 30px rgba(0,0,0,.55));
+      user-select:none;
+      pointer-events:none;
+    }
+    .spacer .mouse{
+      width: 120px;
+      transform: rotate(-6deg);
+    }
+    /* IMPORTANT: set cheese size explicitly (prevents it from growing) */
+    .spacer .cheese{
+      width: 30px;              /* desktop size */
+      transform: rotate(10deg);
+    }
+
+    section{
+      padding: 22px;
+      margin-top: 0;
+    }
+
+    h2{ margin:0 0 10px; font-size: 22px; letter-spacing: -.01em; }
+    .sub{ margin: 0 0 14px; color: var(--muted); line-height:1.6; max-width: 75ch; }
+
+    .grid{ display:grid; grid-template-columns: repeat(3, 1fr); gap: 14px; margin-top: 14px; }
+    .card{
+      padding: 16px;
+      border-radius: var(--radius);
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,.06);
+      min-height: 150px;
+    }
+
+    .num{
+      width: 34px;
+      height: 34px;
+      border-radius: 12px;
+      background: rgba(255,255,255,.10);
+      border: 1px solid var(--border);
+      display:grid;
+      place-items:center;
+      font-weight: 800;
+      margin: 0 auto 10px;
+      line-height: 1;
+    }
+
+    .card h3{ margin:0 0 8px; font-size: 16px; }
+    .card p{ margin:0; color: var(--muted); line-height:1.6; }
+
+    /* Leaderboard block - fully centered (text + pills) */
+    .leaderboard{
+      margin-top: 22px;
+      padding: 22px;
+      display:grid;
+      grid-template-columns: 1fr;
+      gap: 10px;
+      text-align: center;
+      justify-items: center;   /* centers children in the grid */
+    }
+    .leaderboard .sub{
+      margin: 0;
+      max-width: 75ch;
+    }
+    .leaderboard .mini{
+      display:flex;
+      justify-content:center;  /* centers the pills row */
+      align-items:center;
+      gap: 10px;
+      flex-wrap:wrap;
+      width: 100%;
+      margin-top: 6px;
+    }
+
+    .pill{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      gap: 8px;
+      padding: 10px 12px;
+      border: 1px solid var(--border);
+      border-radius: 999px;
+      background: rgba(255,255,255,.06);
+      color: var(--muted);
+      font-size: 13px;
+    }
+
+    /* Features: center heading + sub + cards content */
+    #features{
+      text-align: center;
+    }
+    #features .sub{
+      margin-left: auto;
+      margin-right: auto;
+    }
+    #features .grid{
+      justify-items: center;
+    }
+    #features .card{
+      text-align: center;
+      width: 100%;
+      max-width: 420px; /* prevents odd-looking narrow cards when centered */
+    }
+
+    footer{
+      margin-top: 18px;
+      padding: 18px 6px 0;
+      color: var(--muted2);
+      font-size: 13px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 12px;
+      flex-wrap:wrap;
+      position:relative;
+      z-index:1;
+    }
+    .footerLinks{ display:flex; gap: 14px; flex-wrap:wrap; }
+    .footerLinks a{ color: var(--muted2); }
+
+    @media (max-width: 860px){
+      .hero{ grid-template-columns: 1fr; }
+      h1{ font-size: 34px; }
+      .grid{ grid-template-columns: 1fr; }
+      .heroLogo{ margin-left: 0; max-width: 420px; }
+
+      .spacer .mouse{ width: 96px; }
+      .spacer .cheese{ width: 24px; } /* fixed 24px on small screens */
+    }
+  </style>
 </head>
+
 <body>
-<h1>The Flying Mouse on ios</h1>
-<p>Thank you for playing my game!</p>
-<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf2NsVEUXexIF_5BIfLlNd0K2vd2PKMCkucknTrWHN0nUtmXw/viewform">If you have questions about The Flying Mouse, ask them here.</a></p>
+  <div class="wrap">
+
+    <!-- HERO -->
+    <div class="panel hero">
+      <div>
+        <div class="brand">
+          <div class="icon">
+            <img src="media/The Flying Mouse icon.png" alt="The Flying Mouse app icon">
+          </div>
+          <div>
+            <div style="color:var(--muted2); font-size:12px; letter-spacing:.12em; text-transform:uppercase;">
+              iOS game
+            </div>
+            <h1>The Flying Mouse</h1>
+          </div>
+        </div>
+
+        <p class="tagline">
+          One-tap arcade where every run is fast, difficult, and addictive.
+        </p>
+
+        <div class="cta">
+          <a class="btn" href="https://apps.apple.com/no/app/the-flying-mouse/id6756983960" target="_blank" rel="noopener">
+            <strong>Download</strong> <span class="muted">on App Store</span>
+          </a>
+
+          <a class="btn"
+             href="https://docs.google.com/forms/d/e/1FAIpQLSf2NsVEUXexIF_5BIfLlNd0K2vd2PKMCkucknTrWHN0nUtmXw/viewform"
+             target="_blank" rel="noopener">
+            <strong>Feedback</strong> <span class="muted">Report a bug / send a suggestion</span>
+          </a>
+
+          <a class="btn" href="privacy.html">
+            <strong>Privacy Policy</strong> <span class="muted">Read more</span>
+          </a>
+        </div>
+      </div>
+
+      <div>
+        <img class="heroLogo" src="media/The Flying Mouse Logo.png" alt="The Flying Mouse logo">
+      </div>
+    </div>
+
+    <!-- SPACER WITH MOUSE + CHEESE -->
+    <div class="spacer" aria-hidden="true">
+      <img class="mouse" src="media/Mouse.png" alt="">
+      <img class="cheese" src="media/Cheese.png" alt="">
+    </div>
+
+    <!-- LEADERBOARD BLOCK -->
+    <div class="panel leaderboard">
+      <h2>Leaderboards & Competition</h2>
+      <p class="sub">
+        Compare your best runs on the Game Center leaderboards and compete with friends—or players worldwide—for the top spot.
+      </p>
+      <div class="mini" aria-label="Leaderboard highlights">
+        <span class="pill">Global ranking</span>
+        <span class="pill">Friend competition</span>
+        <span class="pill">Beat your personal best</span>
+      </div>
+    </div>
+
+    <!-- FEATURES -->
+    <div class="panel" style="margin-top:22px;">
+      <section id="features">
+        <h2>Why You’ll Love It</h2>
+        <p class="sub">Quick runs. Simple control. Pure timing.</p>
+
+        <div class="grid">
+          <div class="card">
+            <div class="num">1</div>
+            <h3>One-Tap Control</h3>
+            <p>Tap to fly. Easy to start, hard to master.</p>
+          </div>
+
+          <div class="card">
+            <div class="num">2</div>
+            <h3>Skill-Based Runs</h3>
+            <p>Every mistake matters. Learn patterns, push your best.</p>
+          </div>
+
+          <div class="card">
+            <div class="num">3</div>
+            <h3>Cheese-Chasing Goal</h3>
+            <p>Catch cheese, stay alive, and go for a longer run.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <footer>
+      <div class="footerLinks">
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf2NsVEUXexIF_5BIfLlNd0K2vd2PKMCkucknTrWHN0nUtmXw/viewform"
+           target="_blank" rel="noopener">Feedback</a>
+      </div>
+      <div>© <span id="year"></span> The Flying Mouse</div>
+    </footer>
+  </div>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
