--- a/index.html
+++ b/index.html
@@ -32,11 +32,18 @@
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
       color: var(--text);
       background-color: var(--bg);
+    }
 
+    body::after{
+      content:"";
+      position: fixed;
+      inset: 0;
       background-image: url("media/Background.png");
       background-size: cover;
       background-position: center;
-      background-attachment: fixed;
+      background-repeat: no-repeat;
+      z-index: -2;
+      pointer-events: none;
     }
 
     /* Darker overlay to keep content readable */
@@ -50,7 +57,7 @@
         radial-gradient(900px 700px at 50% 100%, rgba(236,72,153,.10), transparent 60%),
         rgba(0,0,0,.40);
       pointer-events:none;
-      z-index: 0;
+      z-index: -1;
     }
 
     a{ color:inherit; text-decoration:none; }
