Lagt til knapp for other apps

--- a/index.html
+++ b/index.html
@@ -315,15 +315,20 @@
           </a>
 
           <a class="btn"
-             href="https://docs.google.com/forms/d/e/1FAIpQLSf2NsVEUXexIF_5BIfLlNd0K2vd2PKMCkucknTrWHN0nUtmXw/viewform"
-             target="_blank" rel="noopener">
+            href="https://docs.google.com/forms/d/e/1FAIpQLSf2NsVEUXexIF_5BIfLlNd0K2vd2PKMCkucknTrWHN0nUtmXw/viewform"
+            target="_blank" rel="noopener">
             <strong>Feedback</strong> <span class="muted">Report a bug / send a suggestion</span>
           </a>
 
           <a class="btn" href="privacy.html">
             <strong>Privacy Policy</strong> <span class="muted">Read more</span>
           </a>
+
+          <a class="btn" href="https://apps.apple.com/us/developer/joachim-svendsr%C3%B8d/id1864044398" target="_blank" rel="noopener">
+            <strong>See my other apps</strong> <span class="muted">on the App Store</span>
+          </a>
         </div>
+
       </div>
 
       <div>
@@ -381,9 +386,13 @@
     <footer>
       <div class="footerLinks">
         <a href="privacy.html">Privacy Policy</a>
+        <a href="https://apps.apple.com/us/developer/joachim-svendsr%C3%B8d/id1864044398" target="_blank" rel="noopener">
+          Other apps
+        </a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSf2NsVEUXexIF_5BIfLlNd0K2vd2PKMCkucknTrWHN0nUtmXw/viewform"
-           target="_blank" rel="noopener">Feedback</a>
+          target="_blank" rel="noopener">Feedback</a>
       </div>
+
       <div>© <span id="year"></span> The Flying Mouse</div>
     </footer>
   </div>
